@@ -1,6 +1,0 @@
-#!/usr/bin/make -f
-
-test:
-	./run-tests
-
-.PHONY: clean distclean binary install
