@@ -1,10 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ "$(dpkg --print-architecture)" != "amd64" ]; then
-    printf "Tests will only work on amd64\n"
-    exit 0
-fi
-
-run-parts --regex '^test_[a-z_]+$' .
