@@ -11,6 +11,7 @@ ubuntu-core-launcher (2.0) UNRELEASED; urgency=medium
     tag is derived from an argument containing $SNAP_NAME and $APP_NAME. 
   * Clean up tests so that shellcheck reports no more errors or warnings
   * Ensure that shellcheck reports no errors on each build
+  * Switch to autotools, build-depend on pkg-config
 
  -- Zygmunt Krynicki <zygmunt.krynicki@canonical.com>  Sun, 22 May 2016 16:14:24 +0300
 
